# e6sync

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/e6sync/: __about__.py  __main__.py
src/e6sync/api/: __init__.py  client.py  types.py
src/e6sync/cli/: __init__.py
src/e6sync/storage/: __init__.py  repo.py  sidecar_manager.py  types.py  util.py
tests/: __init__.py
